# pydantic_adobe_audition

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
pydantic_adobe_audition/: __init__.py  common.py
pydantic_adobe_audition/model/: __init__.py  audio_device.py  files.py
pydantic_adobe_audition/model/common/: channel_map.py  edit_parameter.py
pydantic_adobe_audition/model/session/: __init__.py  clip_groups.py  metronome.py  properties.py  state.py
pydantic_adobe_audition/model/session/tracks/: __init__.py  bus.py  master.py
pydantic_adobe_audition/model/session/tracks/audio/: __init__.py  edit_parameters.py  effects_rack.py  track_audio_parameters.py  track_parameters.py
pydantic_adobe_audition/model/session/tracks/audio/audio_clip/: __init__.py  channel_map.py  component.py  edit_parameters.py  effects_rack.py  fade.py  (+1 more)
pydantic_adobe_audition/model/session/tracks/bus/: __init__.py
pydantic_adobe_audition/model/session/tracks/common/: __init__.py  component.py  effects_rack.py  track_audio_parameters.py  track_parameters.py
pydantic_adobe_audition/model/session/tracks/master/: __init__.py
pydantic_adobe_audition/model/session/tracks/metronome/: __init__.py
tests/: __init__.py  test_basic.py
tests/sample_chunks/: audio_clip_1.xml  audio_clip_2.xml  audio_clip_3.xml  audio_track_1.xml  audio_track_2.xml  audio_track_3.xml  audio_track_4.xml  audio_track_5.xml  audio_track_6.xml  audio_track_7.xml  bus_track_1.xml  effects_rack_1.xml  master_track_1.xml  tracks_1.xml
tests/sample_projects/: sample_1.sesx  sample_2.sesx
